--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -35,9 +35,10 @@ body:before {
 }
 
 img {
-	transition: 0.25s;
-	transition-timing-function: linear;
+	/* transition: 0.25s;
+	transition-timing-function: linear; */
 	cursor: -webkit-grab !important;
 	display: block;
-	margin: auto auto;
+	margin: 0;
+	position: absolute;
 }
