--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -37,8 +37,9 @@ body:before {
 img {
 	/* transition: 0.25s;
 	transition-timing-function: linear; */
+	display: none;
 	cursor: -webkit-grab !important;
-	display: block;
+	/* display: block; */
 	margin: 0;
 	position: absolute;
 }
